Swapped issues and status in the contant preview toolbar. Hid status in the Content Wizard on mobile resolution.

--- a/src/main/resources/assets/styles/content-status-toolbar.less
+++ b/src/main/resources/assets/styles/content-status-toolbar.less
@@ -6,7 +6,7 @@
   .content-status-wrapper {
     .content-status-mixin();
     display: inline-block;
-    float: right;
+    padding-left: 15px;
 
     .author {
       margin-left: 5px;
@@ -33,6 +33,8 @@
     line-height: 36px;
 
     .content-status-wrapper {
+
+      padding-left: 10px;
 
       .status {
         margin-right: 10px;
