--- a/src/main/resources/assets/styles/wizard/content-wizard-panel.less
+++ b/src/main/resources/assets/styles/wizard/content-wizard-panel.less
@@ -284,7 +284,11 @@
       display: none !important;
     }
 
-    .toolbar {
+    .content-wizard-toolbar {
+
+      .content-status-wrapper {
+        display: inline-block;
+      }
 
       .unpublish-action {
         display: none !important;
