--- a/src/main/resources/assets/styles/wizard/content-wizard-toolbar.less
+++ b/src/main/resources/assets/styles/wizard/content-wizard-toolbar.less
@@ -49,6 +49,7 @@
   }
 
   .content-status-wrapper {
+    display: none; // Is made visible in content-wizard-panel.less
     order: 1;
     margin-left: auto;
   }
